--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body{
   font-family: 'Montserrat', sans-serif;
   color: #222;
   font-weight: 300;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper{
@@ -296,6 +298,11 @@ main .add-to-cart:hover,
 .container ul li {
   margin-bottom: 10px;
 }
+
+.form-container {
+  width: 680px;
+}
+
 #contact-info ul {
   list-style-type: none;
   padding: 0;
@@ -339,4 +346,129 @@ main .add-to-cart:hover,
 footer{
   text-align: center;
   margin-top: 100px;
+}
+
+#account-info {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba( 0, 0, 0, 0.1);
+  max-width: 400px;
+  padding: 20px;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+}
+
+#account-info h2{
+  margin-top: 0;
+  font-size: 24px;
+  color: #333;
+}
+
+#account-info p{
+  color: #666;
+  font-size: 14px;
+}
+
+#account-info ul{
+  list-style-type: none;
+  padding: 0;
+}
+
+#account-info li{
+  margin: 10px 0;
+  font-size: 16px;
+  color: #555;
+}
+
+#account-info li strong{
+  color: #333;
+}
+
+.section-container {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.section-container h2 {
+  margin-top: 0;
+  font-size: 24px;
+  color: #333;
+}
+
+.section-container p {
+  color: #666;
+  font-size: 14px;
+}
+
+.section-container label {
+  display: block;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #555;
+  text-align: left;
+}
+
+.section-container input[type="password"] {
+  width: calc(100% - 22px);
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  box-sizing: border-box;
+}
+
+.section-container button {
+  background-color: black;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.section-container button:hover {
+  background-color: black;
+}
+
+#why-us ul, #services ul {
+  padding-left: 20px;
+}
+
+#why-us li h3, #services li {
+  font-size: 1.5em;
+  color: black;
+  margin-bottom: 10px;
+}
+
+#why-us li p {
+  font-size: 1.1em;
+  color: #555;
+}
+
+#services li {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#contact p {
+  font-size: 1.2em;
+  color: #444;
 }
